fixed slider horizontal scroll

--- a/hw7/app/blocks/slider.sass
+++ b/hw7/app/blocks/slider.sass
@@ -61,7 +61,9 @@
         @include respond-to (sm)
             width: (274/16)+rem
         @include respond-to (md)
-            width: (521/16)+rem
+            width: (500/16)+rem
+            max-width: (521/16)+rem
+
 
     &__text
         display: none
